非技术面试添加薪资相关问题

--- a/面试清单/非技术面试及注意事项.md
+++ b/面试清单/非技术面试及注意事项.md
@@ -10,6 +10,12 @@
   - 回答的整体原则：**保证一个良好的人设**
   - 比如说：公司想让我转职（产品转运营，前端转后端，后端转前端），和我的职业规划不相符，于是提出了离职
 - 你上家的工资多少？现在期望工资多少？
+  - 期望薪资一定不要比上一家薪资低，这样HR可能怀疑你的能力
+  - 可参考：[面试官问“你期望的薪酬是多少”时，实际上是在问什么？](https://maimai.cn/article/detail?fid=824341843&efid=cOzTpChkaSDBSg06OGDACQ)
+- 你是最近才开始找工作吗？
+  - 如果HR不问你，你也要无意提到自己是最近才刚刚找工作
+  - 如果你找工作的时间过长HR可能会怀疑你的能力
+  - 关于空档期的问题：你可以说自己当时没有那么着急找工作，自己去旅游了或者在家休息
 
 ### 2、其他问题
 
