添加求职相关软件

--- a/面试清单/非技术面试及注意事项.md
+++ b/面试清单/非技术面试及注意事项.md
@@ -1,6 +1,28 @@
-# 非技术面试及注意事项
+# 非技术面试及其他相关
 
-### 1、常见问题
+
+### 1、求职软件/网站汇总
+
+| 软件                                           | 评价                                                         | 推荐指数 |
+| ---------------------------------------------- | ------------------------------------------------------------ | -------- |
+| 拉钩网                                         | 手机端产品设计的比较好，当时在上面找到了很多的面试机会       | 5        |
+| Boss直聘                                       | 给我印象不太好，万年已读不理人，JD写的吓人，不过最后的offer来自boss直聘 | 3        |
+| 大街网                                         | 使用频率低，不作评价                                         |          |
+| 智联招聘                                       | 未用过，不作评价                                             |          |
+| 前程无忧                                       | 未用过，不作评价                                             |          |
+| [牛客讨论区](https://www.nowcoder.com/discuss) | 校招内推比较多，不过也有一些社招内推                         | 3        |
+| [V2EX](https://www.v2ex.com/?tab=jobs)         | 酷工作专区有一些内推                                         | 4        |
+| 实习僧                                         | **应届生**可以找一些实习，我的第一份工作就是在这上边找的     |          |
+| 应届生求职                                     | 未用过，不做评价                                             |          |
+
+其他：
+
+| 软件   | 评价                                                         |
+| ------ | ------------------------------------------------------------ |
+| 看准   | 用于查看公司的一些评价，能够避免一些坑，不过有的公司信息可能没有 |
+| 天眼查 | 用于查看公司的运营情况，我也没有深入研究过，有兴趣的小伙伴可以自行摸索 |
+
+### 2、常见问题
 
 - 简单介绍一下你自己
   - 自己的学校专业
@@ -17,7 +39,7 @@
   - 如果你找工作的时间过长HR可能会怀疑你的能力
   - 关于空档期的问题：你可以说自己当时没有那么着急找工作，自己去旅游了或者在家休息
 
-### 2、其他问题
+### 3、其他问题
 
 有竞赛经历并得奖的，这些问题简直不要太简单，所以说大学时期最好要多多参加比赛
 
@@ -26,7 +48,7 @@
 - 你压力最大的一个时期是什么？你是如何应对的？
   - 我讲的是我高中复习时期的一些事情/跑步（强调**长跑**，一般人做不到的那种）
 
-### 3、关于“您有什么想要问我的吗？”
+### 4、关于“您有什么想要问我的吗？”
 
 - **问业务（CEO面）**
   - 我看您职位招聘上没有写，请问如果入职之后，我大概负责公司的那块业务？（HR面）
@@ -40,7 +62,7 @@
   - 麻烦一下，方便透露后端的基本架构和技术栈吗？
   - 公司是代码的版本控制用的是git还是svn？/公司是如何进行代码的版本控制的？
 
-### 4、offer比较须知
+### 5、offer比较须知
 
 我们在比较offer的时候可能无从下手，入职前我们一定要把一下这些问题搞清楚：
 
@@ -78,3 +100,4 @@
 - 朝九晚五（7小时工作制），早上通勤50分钟，晚上通勤40分钟；
 - 早上大概7点半左右起床，收拾一下，吃点东西，7点50从家里出发；
 - 晚上到家基本6点多，然后写自己的开源项目，或者学习，或者去跑步，刷剧，11点左右睡觉。
+
